# cryptorDetector

./: CMakeLists.txt  README.md  fanotify_daemon.service
fanotify/: CMakeLists.txt  README.md  fanotify_config.json  fanotify_detector.service  install.sh
fanotify/include/: config.h  detector.h  encrypt.h  fanotify_wrapper.h  tracer.h
fanotify/include/fanotify/: config.h  detector.h  fanotify_helpers.h
fanotify/include/sqlite/: database.h  error_handling.h  filedb.h  statement.h
fanotify/include/tracer/: tracer.h
fanotify/src/: config.cpp  encrypt.cpp  encryptor.cpp  fanotify.cpp  fanotify_wrapper.cpp
fanotify/src/cryptor/: encrypt.cpp
fanotify/src/fanotify/: config.cpp  detector.cpp  fanotify.cpp  fanotify_daemon.cpp  fanotify_helpers.cpp  fanotify_wrapper.cpp
fanotify/src/sqlite/: filedb.cpp
include/fanotify/: fanotify_wrapper.h
include/sqlite/: database.h
src/cryptor/: encryptor.cpp
src/fanotify/: config.cpp  fanotify_daemon.cpp
src/sqlite/: filedb.cpp
